--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,16 @@
 # production
 /build
 
-# misc
-.DS_Store
+# evn
+.env
 .env.local
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
+
+# misc
+.DS_Store
 
 npm-debug.log*
 yarn-debug.log*
